#Ajout du service MetaData - Récupération de l'information envoi réussi pour le HL7

--- a/LDApi.RIS.csproj
+++ b/LDApi.RIS.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="PDFsharp" Version="6.2.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.6" />
   </ItemGroup>
 
