--- a/LDApi.RIS/LDApi.RIS.csproj
+++ b/LDApi.RIS/LDApi.RIS.csproj
@@ -13,5 +13,8 @@
     <PackageReference Include="xunit" Version="2.9.3" />
 	  <PackageReference Include="YamlDotNet" Version="16.3.0" />
   </ItemGroup>
-
+	<Target Name="CopyReactBuild" AfterTargets="Build">
+	  <Exec Command="xcopy /E /Y &quot;$(ProjectDir)..\ldapi-ris-ts\build\*&quot; &quot;$(ProjectDir)..\wwwroot\&quot;" Condition=" '$(OS)' == 'Windows_NT' " />
+	  <Exec Command="cp -r $(ProjectDir)..ldapi-ris-ts/build/* $(ProjectDir)..wwwroot/" Condition=" '$(OS)' != 'Windows_NT' " />
+	</Target>
 </Project>
