#Creation des fichiers d'installation (wix et powershell) pour windows #Creation d'un script sh pour déployer sous linux macos

--- a/.gitignore
+++ b/.gitignore
@@ -364,3 +364,11 @@ FodyWeavers.xsd
 /deploy
 
 wwwroot
+Installer
+
+# Code coverage reports
+coverage/
+coverage-report/
+TestResults/
+*.coverage
+*.coveragexml
