#Reprise du build windows #Reprise du script git action

--- a/.github/workflows/dotnet-ci.yml
+++ b/.github/workflows/dotnet-ci.yml
@@ -2,9 +2,9 @@ name: .NET CI
 
 on:
   push:
-    branches: [ "main", "master", "dev" ]
+    branches: [ "dev", "main" ]
   pull_request:
-    branches: [ "main", "master", "dev" ]
+    branches: [ "dev"]
 
 jobs:
   build-test-coverage:
