feat(auth): authentication implementation

--- a/LDApi.RIS/appsettings.json
+++ b/LDApi.RIS/appsettings.json
@@ -9,5 +9,13 @@
   "Mllp": {
     "Host": "127.0.0.1",
     "Port": 6661
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=LDARisDb.db"
+  },
+    "Jwt": {
+    "Issuer": "LDARis",
+    "Audience": "LDARisClient",
+    "Secret": "LaximétrieDynamiqueAutomatiséeEtInnovante"
   }
 }
