--- a/LDApi.RIS/ReportStatus/Report_2.yml
+++ b/LDApi.RIS/ReportStatus/Report_2.yml
@@ -1,4 +1,4 @@
 reportId: 2
-fileName: ERMAN_SABINA_19800923_20250221110755_20251112.pdf
-envoiHL7: AA
-date: 2025-12-03T14:03:26.2079435Z
+fileName: fakepath2.pdf
+envoiHL7: AE
+date: 2025-12-11T09:11:00.8569704Z
