--- a/.github/workflows/dotnet-ci.yml
+++ b/.github/workflows/dotnet-ci.yml
@@ -1,10 +1,8 @@
 name: .NET CI
 
 on:
-  push:
-    branches: [ "dev", "main" ]
   pull_request:
-    branches: [ "dev"]
+    branches: [ "main"]
 
 jobs:
   build-test-coverage:
